fix(migrations): corrige problemas críticos nas migrations e configurações
* Remove duplicatas e conflitos nas migrations do Flyway
* Altera a configuração do Hibernate para evitar perda de dados com `ddl-auto=create-drop`
* Introduz a classe `BaseEntity` para unificar a lógica de soft delete nas entidades
* Atualiza a nomenclatura das migrations para um padrão consistente
* Documenta o plano de correção e as regras para futuras implementações

BREAKING CHANGE: A estrutura das migrations foi alterada, requer nova execução do Flyway